# smartoj-backend

./: .gitignore  Dockerfile  README.md  docker-compose-infra.yaml  docker-compose.yaml  elasticsearch.Dockerfile  fastapi.conf  log-config.json  main.py  metadata-docker.json  metadata.json  pyproject.toml  requirements.txt  settings.py  smartoj.sql
core/: algorithm_knowledge_graph.py
core/codesandbox/: caller.py
core/user/: auth.py  security.py  session.py
mq/: broker.py
routes/: __init__.py
routes/codesandbox/: models.py  route.py
routes/comment/: models.py  route.py
routes/management/: models.py  route.py
routes/message/: models.py  route.py
routes/question/: models.py  route.py
routes/recommendation/: models.py  route.py
routes/solution/: models.py  route.py
routes/user/: models.py  route.py
scripts/: create_es_data.py  listen_mysql_binlog.py
storage/: cache.py  es.py  oss.py
storage/mysql/: __init__.py  base.py  db_engine.py  executors.py  multi_executor.py  session.py  shortcuts.py
storage/mysql/codesandbox/: models.py  services.py
storage/mysql/interaction/: models.py  services.py
storage/mysql/question/: models.py  services.py
storage/mysql/recommendation/: models.py  service.py
storage/mysql/user/: models.py  services.py
utils/: dependencies.py  generic.py  mail.py  models.py  responses.py  service_registry.py
utils/models/: __init__.py  base.py  sqlmodels.py
utils/openapi/: docs.py
utils/user/: auth.py  security.py
